Layered recursion and reduce value bias in scoring

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,10 +8,10 @@
                 "-fcolor-diagnostics",
                 "-fansi-escape-codes",
                 "-g",
-                "${workspaceFolder}/cpp/main/benchmark/*.cpp",
                 "${workspaceFolder}/cpp/main/board/*.cpp",
                 "${workspaceFolder}/cpp/main/generators/*.cpp",
                 "${workspaceFolder}/cpp/main/solver/*.cpp",
+                "${workspaceFolder}/cpp/test/benchmark/*.cpp",
                 "${workspaceFolder}/cpp/test/board/*.cpp",
                 "${workspaceFolder}/cpp/test/generators/*.cpp",
                 "${file}",
